--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,10 @@ body {
     background-color: #0056b3;
 }
 
+.booking-section.hide {
+    display: none;
+}
+
 .booked-rooms,
 .classroom-management {
     margin-top: 30px;
@@ -94,11 +98,7 @@ ul {
     border-bottom: 1px solid #ccc;
 }
 
-.logout-btn {
-    background-color: #dc3545;
+.footer {
+    text-align: center;
+    margin-top: 50px;
 }
-
-.logout-btn:hover {
-    background-color: #c82333;
-}
-
