--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,42 @@
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-#loginPage, #bookingPage {
+header {
+    background-color: #4CAF50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#loginPage, #bookingPage, #myBookingsPage, #allBookedClassroomsPage {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
     text-align: center;
-    margin-top: 50px;
 }
 
-input[type="text"], input[type="password"], button {
+input[type="text"], input[type="password"], input[type="date"], input[type="time"], button {
     margin: 10px 0;
     padding: 8px;
     width: 100%;
     box-sizing: border-box;
+}
+
+.bookingsList {
+    list-style: none;
+    padding: 0;
 }
 
 button {
